force-app/main/default/objects/echosign_dev1__Recipient_Template__c/fields/echosign_dev1__DIG_Provider_Label__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__DIG_Provider_Label__c</fullName>
    <description>Label for selected DIG provider label</description>
    <inlineHelpText>Label for selected DIG provider label</inlineHelpText>
    <label>DIG Provider Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>