force-app/main/default/objects/echosign_dev1__Recipient_Template__c/fields/echosign_dev1__Do_Not_Create_Empty__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Do_Not_Create_Empty__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if you do not want a blank placeholder recipient to be created on the agreement page if no record is found based on the selected criteria.</description>
    <inlineHelpText>Check this box if you do not want a blank placeholder recipient to be created on the agreement page if no record is found based on the selected criteria.</inlineHelpText>
    <label>Do Not Create Blank Recipient Row</label>
    <type>Checkbox</type>
</CustomField>