force-app/main/default/objects/echosign_dev1__Recipient_Template__c/fields/echosign_dev1__Email_Recipient__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Email_Recipient__c</fullName>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>