force-app/main/default/objects/echosign_dev1__Recipient_Template__c/fields/echosign_dev1__Group_Recipient__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Group_Recipient__c</fullName>
    <label>Recipient - Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>