force-app/main/default/objects/echosign_dev1__Recipient_Template__c/fields/echosign_dev1__Index__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Index__c</fullName>
    <description>Set the signing order index for the recipient generated by this template. Setting the same order number for multiple recipient templates will use hybrid recipients.</description>
    <inlineHelpText>Set the signing order index for the recipient generated by this template. Setting the same order number for multiple recipient templates will use hybrid recipients.</inlineHelpText>
    <label>Index</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>