force-app/main/default/objects/echosign_dev1__Recipient_Template__c/fields/echosign_dev1__Lead_Recipient__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Lead_Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient - Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Add Recipients</relationshipLabel>
    <relationshipName>Recipient_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>