force-app/main/default/objects/echosign_dev1__Recipient_Template__c/fields/echosign_dev1__Participant_Set_Index__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Participant_Set_Index__c</fullName>
    <label>Participant Set Index</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>