force-app/main/default/objects/echosign_dev1__Recipient_Template__c/fields/echosign_dev1__Phone_Verification_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Phone_Verification_Country_Code__c</fullName>
    <label>Phone Verification Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>212</fullName>
            </value>
            <value>
                <fullName>213</fullName>
            </value>
            <value>
                <fullName>216</fullName>
            </value>
            <value>
                <fullName>221</fullName>
            </value>
            <value>
                <fullName>225</fullName>
            </value>
            <value>
                <fullName>230</fullName>
            </value>
            <value>
                <fullName>231</fullName>
            </value>
            <value>
                <fullName>233</fullName>
            </value>
            <value>
                <fullName>234</fullName>
            </value>
            <value>
                <fullName>254</fullName>
            </value>
            <value>
                <fullName>255</fullName>
            </value>
            <value>
                <fullName>260</fullName>
            </value>
            <value>
                <fullName>262</fullName>
            </value>
            <value>
                <fullName>263</fullName>
            </value>
            <value>
                <fullName>264</fullName>
            </value>
            <value>
                <fullName>265</fullName>
            </value>
            <value>
                <fullName>27</fullName>
            </value>
            <value>
                <fullName>297</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>31</fullName>
            </value>
            <value>
                <fullName>32</fullName>
            </value>
            <value>
                <fullName>33</fullName>
            </value>
            <value>
                <fullName>34</fullName>
            </value>
            <value>
                <fullName>351</fullName>
            </value>
            <value>
                <fullName>352</fullName>
            </value>
            <value>
                <fullName>353</fullName>
            </value>
            <value>
                <fullName>354</fullName>
            </value>
            <value>
                <fullName>357</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>