force-app/main/default/objects/echosign_dev1__Recipient_Template__c/fields/echosign_dev1__Phone_Verification_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Phone_Verification_Phone_Number__c</fullName>
    <label>Phone Verification Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>