force-app/main/default/objects/echosign_dev1__Recipient_Template__c/fields/echosign_dev1__Recipient_Field__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Recipient_Field__c</fullName>
    <label>Select Source Field from Master Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>