force-app/main/default/objects/echosign_dev1__Recipient_Template__c/fields/echosign_dev1__Recipient_Message__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Recipient_Message__c</fullName>
    <description>Set a unique message for the recipient.</description>
    <inlineHelpText>Set a unique message for the recipient.</inlineHelpText>
    <label>Recipient Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>