force-app/main/default/objects/echosign_dev1__Recipient_Template__c/fields/echosign_dev1__Type__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Type__c</fullName>
    <label>Source of Recipient</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Predefine the Recipient</fullName>
                <default>true</default>
                <label>Predefine the Recipient</label>
            </value>
            <value>
                <fullName>Look Up Based on Master Object Field</fullName>
            </value>
            <value>
                <fullName>Opportunity Primary Contact Role</fullName>
            </value>
            <value>
                <fullName>Opportunity Contact Role</fullName>
            </value>
            <value>
                <fullName>All Opportunity Contact Roles</fullName>
            </value>
            <value>
                <fullName>Account Primary Contact Role</fullName>
            </value>
            <value>
                <fullName>Account Contact Role</fullName>
            </value>
            <value>
                <fullName>All Account Contact Roles</fullName>
            </value>
            <value>
                <fullName>Runtime Variable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>