force-app/main/default/objects/echosign_dev1__Recipient_Template__c/fields/echosign_dev1__Uniform_Index__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Uniform_Index__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this option to set the same index for a template which results in multiple recipients, making them hybrid signers.</description>
    <inlineHelpText>Enable this option to set the same index for a template which results in multiple recipients, making them hybrid signers.</inlineHelpText>
    <label>Uniform Index</label>
    <type>Checkbox</type>
</CustomField>