force-app/main/default/objects/echosign_dev1__Recipient_Template__c/fields/echosign_dev1__Variable_Name_Last__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Variable_Name_Last__c</fullName>
    <label>Last Name Variable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>